--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <div class="card">
         <div class="card-header text-center"> BMI Calculator</div>
         <div class="card-body">
-            <form action="" class="w-50 m-auto">
+            <form action="" class="w-50 m-auto" onsubmit="return false">
                 <div class="form-group">
                     <label for="weight ">Weight:</label>
-                    <input type="number" id="Weight" class="form-control" placeholder="Weight in KG">
+                    <input type="number" id="Weight" class="form-control" placeholder="Weight in KG" required id="weight">
                 </div>
                 <div class="form-group">
                     <label for="height ">Height:</label>
-                    <input type="number" id="Height" class="form-control" placeholder="Height in feet">
+                    <input type="text" id="Height" class="form-control" placeholder="Height in feet" required id="height">
                 </div>
                 <div class="form-group">
                     <label for="weight ">BMI Value:</label>
-                    <input type="number" id="Weight" class="form-control">
+                    <input type="number" id="BmiValue" class="form-control">
                 </div>
                 <div>
                     <button type="submit" class="btn btn-success" onclick="getbmivalue()"> Check BMI</button>
@@ -38,6 +38,15 @@
         function getbmivalue(){
             var weight =document.getElementById("Weight").value;
             var height =document.getElementById("Height").value;
+
+            height =height *12;
+            height =height * 0.025;// now height in meter;
+
+            var newBmiValue=weight / (height*height);
+
+           newBmiValue= Math.round(newBmiValue);
+
+            document.getElementById("BmiValue").value = newBmiValue;
 
         }
     </script>
